@@ -1,3 +1,8 @@
+2008-04-21  Pino Toscano  <pino@kde.org>
+
+	* Makefile.am: use $(top_builddir) instead of $(builddir) in the
+	"check" target, this way it works also with automake 1.9.
+
 2008-04-21  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add mime-type for MS Works
